// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KLabel passes the \`for\` attribute to label when \`for\` is provided 1`] = `<label for="test-id" class="k-input-label">Full Name</label>`;

exports[`KLabel renders a tooltip when \`help\` is provided 1`] = `
<label class="k-input-label">
  <div id="dcd15dd1-22e0-11ec-bf28-e7912c7d1fab" aria-controls="dcd15dd0-22e0-11ec-bf28-e7912c7d1fab" role="button" tab-index="0" class="label-tooltip">Full Name <svg height="16" width="16" viewBox="0 0 24 24" role="img" class="kong-icon kong-icon-help">
      <!---->
      <g>
        <!---->
        <!---->
        <path d="M12 2a10.01 10.01 0 0 1 0 20 10 10 0 0 1 0-20Zm-.18 12h.79c.23 0 .35-.1.4-.32.05-.21.1-.42.18-.62.15-.32.43-.5.72-.68 1.18-.74 1.87-1.75 1.7-3.2-.12-.91-.55-1.61-1.32-2.1a4.98 4.98 0 0 0-3.91-.3c-1.07.4-1.72 1.13-1.8 2.31-.01.21.1.37.32.38.52.01 1.04.03 1.57.03.25 0 .42-.14.5-.38.14-.51.51-.72 1.01-.77.57-.04 1.08.3 1.2.8.2.75.03 1.42-.56 1.94-.35.31-.73.58-1.1.87-.49.4-.83.9-.87 1.56-.02.31.1.48.42.48h.75Zm-.02 1.56h-.67c-.3 0-.52.22-.52.53v.8c0 .35.22.57.56.57h1.27c.32 0 .53-.2.55-.53a8.8 8.8 0 0 0 0-.85c-.02-.33-.23-.52-.57-.53h-.62Z" fill="#A3BBCC"></path>
      </g>
    </svg>
    <div id="dcd15dd0-22e0-11ec-bf28-e7912c7d1fab" role="region" tab-index="0" class="k-popover kooltip mt-2  hide-caret" style="width: auto; display: none;" name="fade">
      <!---->
      <div class="k-popover-content">
        <div role="tooltip">This is a tooltip</div>
      </div>
      <!---->
    </div>
  </div>
</label>
`;

exports[`KLabel renders a tooltip when \`info\` is provided 1`] = `
<label class="k-input-label">
  <div id="dcd52e61-22e0-11ec-bf28-e7912c7d1fab" aria-controls="dcd52e60-22e0-11ec-bf28-e7912c7d1fab" role="button" tab-index="0" class="label-tooltip">Full Name <svg height="16" width="16" viewBox="0 0 16 16" role="img" class="kong-icon kong-icon-info">
      <!---->
      <g>
        <!---->
        <!---->
        <path fill="#A3BBCC" fill-rule="evenodd" d="M16 8c0-4.418278-3.58172-8-8-8S0 3.581722 0 8s3.58172 8 8 8 8-3.581722 8-8zm-1.5 0c0 3.5898509-2.91015 6.5-6.5 6.5S1.5 11.5898509 1.5 8 4.41015 1.5 8 1.5s6.5 2.9101491 6.5 6.5zM6 12h4v-1H9V7H6v1h1v3H6v1zm1-6.5046844C7 5.7740451 7.21404 6 7.50468 6h.99064C8.77405 6 9 5.785965 9 5.4953156v-.9906312C9 4.2259549 8.78596 4 8.49532 4h-.99064C7.22595 4 7 4.214035 7 4.5046844v.9906312z"></path>
      </g>
    </svg>
    <div id="dcd52e60-22e0-11ec-bf28-e7912c7d1fab" role="region" tab-index="0" class="k-popover kooltip mt-2  hide-caret" style="width: auto; display: none;" name="fade">
      <!---->
      <div class="k-popover-content">
        <div role="tooltip">This is a tooltip</div>
      </div>
      <!---->
    </div>
  </div>
</label>
`;
